--- a/C extension/CMakeLists.txt
+++ b/C extension/CMakeLists.txt
@@ -5,8 +5,5 @@ set(CMAKE_C_STANDARD 17)
 
 add_library(C_extension SHARED
         library.h
-        library.cpp
-)
-add_executable(test
-        header.h
+        library.c
 )
