Now the dll file will be outputted to the parent directory with the name of libstegano.dll

--- a/C extension/CMakeLists.txt
+++ b/C extension/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.26)
-project(C_extension C)
+project(stegano C)
 
 set(CMAKE_C_STANDARD 17)
+
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/..)
 
 add_library(C_extension SHARED
         library.h
