--- a/C extension/CMakeLists.txt
+++ b/C extension/CMakeLists.txt
@@ -14,3 +14,7 @@ add_library(stegano SHARED
 set_target_properties(stegano PROPERTIES
         DEBUG_POSTFIX "_debug"  # Add a "_d" postfix for debug builds
 )
+
+install(TARGETS stegano DESTINATION ${PROJECT_SOURCE_DIR}/.. CONFIGURATIONS Release)
+
+add_executable(test test.c library.h library.c)
